--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <title>Homework Gulp SCSS</title>
 </head>
 <body>
-
+<header class="header">
+    <nav>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </nav>
+</header>
 <script src="dist/js/scripts.min.js"></script>
 </body>
 </html>
