--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dist/css/styles.min.css">
+    <link rel="stylesheet" href="dist/css/style.min.css">
     <title>Homework Gulp SCSS</title>
 </head>
 <body>
-<header class="header">
-    <nav>
-        <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-            <li>6</li>
+<header class="header container">
+    <nav class="header__nav">
+        <ul class="header__menu navmenu">
+            <li class="navmenu__item">Home</li>
+            <li class="navmenu__item">About us</li>
+            <li class="navmenu__item">Our journal</li>
+            <li class="navmenu__item">Projects</li>
+            <li class="navmenu__item">News</li>
+            <li class="navmenu__item">Features</li>
+            <li class="navmenu__item">Contact</li>
         </ul>
+        <div class="header__btn">
+            <button class="burger">
+            </button>
+        </div>
     </nav>
 </header>
 <script src="dist/js/scripts.min.js"></script>
