--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
 <header class="header container">
     <nav class="header__nav">
         <ul class="header__menu navmenu">
-            <li class="navmenu__item">Home</li>
-            <li class="navmenu__item">About us</li>
-            <li class="navmenu__item">Our journal</li>
-            <li class="navmenu__item">Projects</li>
-            <li class="navmenu__item">News</li>
-            <li class="navmenu__item">Features</li>
-            <li class="navmenu__item">Contact</li>
+            <li class="navmenu__item navmenu__item--active"><a href="#">Home</a></li>
+            <li class="navmenu__item"><a href="#">About us</a></li>
+            <li class="navmenu__item"><a href="#">Our journal</a></li>
+            <li class="navmenu__item"><a href="#">Projects</a></li>
+            <li class="navmenu__item"><a href="#">News</a></li>
+            <li class="navmenu__item"><a href="#">Features</a></li>
+            <li class="navmenu__item"><a href="#">Contact</a></li>
         </ul>
-        <div class="header__btn">
+        
             <button class="burger">
+                <span></span>
             </button>
-        </div>
     </nav>
 </header>
+<section class="hero container">
+    <img class="hero__img" srcset="../dist/img/hero320.png 320w,
+    ../dist/img/hero768.png 768w,
+    ../dist/img/hero1200.png 1170w"
+             sizes="(min-width: 1100px) 1170px, 100vw"
+             src="../dist/img/hero1200.png" alt="Hero image">
+</section>
 <script src="dist/js/scripts.min.js"></script>
 </body>
 </html>
