--- a/index.html
+++ b/index.html
@@ -20,18 +20,95 @@
             <li class="navmenu__item"><a href="#">Features</a></li>
             <li class="navmenu__item"><a href="#">Contact</a></li>
         </ul>
-        
-            <button class="burger">
-                <span></span>
-            </button>
+
+        <button class="burger">
+            <span></span>
+        </button>
     </nav>
 </header>
 <section class="hero container">
     <img class="hero__img" srcset="../dist/img/hero320.png 320w,
     ../dist/img/hero768.png 768w,
     ../dist/img/hero1200.png 1170w"
-             sizes="(min-width: 1100px) 1170px, 100vw"
-             src="../dist/img/hero1200.png" alt="Hero image">
+         sizes="(min-width: 1100px) 1170px, 100vw"
+         src="../dist/img/hero1200.png" alt="Hero image">
+</section>
+<section class="posts container">
+    <h2 class="posts__title">- our recent posts</h2>
+    <div class="posts__list list">
+        <ul class="list__col">
+            <li class="posts__item item-posts">
+                <div class="item-posts__img">
+                    <img src="../dist/img/postimg1.png" alt="postimg 1" class="">
+                </div>
+                <div class="item-posts__content">
+                    <h3 class="item-posts__title"><a href="#" class="item-posts__link">Aenean Adipiscing Etiam
+                        Vestibulum</a></h3>
+                    <div class="item-posts__meta item-meta">
+                        <a href="#" class="item-meta__author">Photography, Journal</a>
+                        <span class="item-meta__sep">/</span>
+                        <a href="#" class="item-meta__comments">9 Comments</a>
+                    </div>
+                    <div class="item-posts__text">Etiam porta sem malesuada euismod. Aenean leo quam. Pellentesque
+                        ornare sem lacinia quam venenatis vestibulum.
+                    </div>
+                </div>
+            </li>
+            <li class="posts__item item-posts">
+                <div class="item-posts__img">
+                    <img src="../dist/img/postimg2.png" alt="postimg 1" class="">
+                </div>
+                <div class="item-posts__content">
+                    <h3 class="item-posts__title"><a href="#" class="item-posts__link">Aenean Adipiscing Etiam
+                        Vestibulum</a></h3>
+                    <div class="item-posts__meta item-meta">
+                        <a href="#" class="item-meta__author">Photography, Journal</a>
+                        <span class="item-meta__sep">/</span>
+                        <a href="#" class="item-meta__comments">9 Comments</a>
+                    </div>
+                    <div class="item-posts__text">Etiam porta sem malesuada euismod. Aenean leo quam. Pellentesque
+                        ornare sem lacinia quam venenatis vestibulum.
+                    </div>
+                </div>
+            </li>
+        </ul>
+        <ul class="list__col2">
+            <li class="posts__item item-posts">
+                <div class="item-posts__img">
+                    <img src="../dist/img/postimg3.png" alt="postimg 1" class="">
+                </div>
+                <div class="item-posts__content">
+                    <h3 class="item-posts__title"><a href="#" class="item-posts__link">Aenean Adipiscing Etiam
+                        Vestibulum</a></h3>
+                    <div class="item-posts__meta item-meta">
+                        <a href="#" class="item-meta__author">Photography, Journal</a>
+                        <span class="item-meta__sep">/</span>
+                        <a href="#" class="item-meta__comments">9 Comments</a>
+                    </div>
+                    <div class="item-posts__text">Etiam porta sem malesuada euismod. Aenean leo quam. Pellentesque
+                        ornare sem lacinia quam venenatis vestibulum.
+                    </div>
+                </div>
+            </li>
+            <li class="posts__item item-posts">
+                <div class="item-posts__img">
+                    <img src="../dist/img/postimg4.png" alt="postimg 1" class="">
+                </div>
+                <div class="item-posts__content">
+                    <h3 class="item-posts__title"><a href="#" class="item-posts__link">Aenean Adipiscing Etiam
+                        Vestibulum</a></h3>
+                    <div class="item-posts__meta item-meta">
+                        <a href="#" class="item-meta__author">Photography, Journal</a>
+                        <span class="item-meta__sep">/</span>
+                        <a href="#" class="item-meta__comments">9 Comments</a>
+                    </div>
+                    <div class="item-posts__text">Etiam porta sem malesuada euismod. Aenean leo quam. Pellentesque
+                        ornare sem lacinia quam venenatis vestibulum.
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
 </section>
 <script src="dist/js/scripts.min.js"></script>
 </body>
