--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             <li class="navmenu__item"><a href="#">Features</a></li>
             <li class="navmenu__item"><a href="#">Contact</a></li>
         </ul>
-
         <button class="burger">
             <span></span>
         </button>
@@ -34,7 +33,7 @@
          src="../dist/img/hero1200.png" alt="Hero image">
 </section>
 <section class="posts container">
-    <h2 class="posts__title">- our recent posts</h2>
+    <h2 class="posts__title section-title">- our recent posts</h2>
     <div class="posts__list list">
         <ul class="list__col">
             <li class="posts__item item-posts">
@@ -110,6 +109,43 @@
         </ul>
     </div>
 </section>
+<section class="photos">
+    <div class="container">
+        <div class="photos__header">
+            <h2 class="photos__title section-title">- Last Instagram Shot</h2>
+            <a href="#" class="photos__link">go to our instagram page -</a>
+        </div>
+        <div class="photos__list">
+            <img class="photos__item show" src="../dist/img/insta1.png" alt="img1"/>
+            <img class="photos__item" src="../dist/img/insta2.png" alt="img2"/>
+            <img class="photos__item" src="../dist/img/insta3.png" alt="img3"/>
+            <img class="photos__item" src="../dist/img/insta4.png" alt="img4"/>
+        </div>
+    </div>
+</section>
+<footer class="footer">
+    <div class="container">
+        <h2 class="footer__title">- get in touch with us -</h2>
+        <p class="footer__text">Maecenas faucibus molli interdum. Cras mattis consectetur purus sitor amet sed donec
+            malesuada ullamcorper odio.</p>
+        <div class="footer__socials socials">
+            <a href="#" class="socials__link socials__link--rss"><i class="fas fa-rss"></i></a>
+            <a href="#" class="socials__link socials__link--fb"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="socials__link socials__link--tw"><i class="fab fa-tumblr"></i></a>
+            <a href="#" class="socials__link socials__link--dr"><i class="fab fa-dribbble"></i></a>
+            <a href="#" class="socials__link socials__link--pn"><i class="fab fa-pinterest-p"></i></a>
+        </div>
+        <div class="footer__contacts contacts">
+            <ul class="contacts__list">
+                <li class="contacts__item">Moonshine St. 14-05 Light City <span>/</span></li>
+                <li class="contacts__item">T. +00 (123) 456 78 90 <span>/</span></li>
+                <li class="contacts__item">first.last@email.com</li>
+            </ul>
+        </div>
+    </div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://kit.fontawesome.com/0b7fe71c9f.js" crossorigin="anonymous"></script>
 <script src="dist/js/scripts.min.js"></script>
 </body>
 </html>
